fix(components-MDX): adjust list item spacing (#1258)

--- a/components/Lists/Item.module.css
+++ b/components/Lists/Item.module.css
@@ -3,7 +3,7 @@
 }
 
 .item > span {
-  @apply mr-1 leading-relaxed;
+  @apply mt-1 mr-1 items-baseline leading-relaxed;
 }
 
 .item > div {
